adds image animation

--- a/CVApp/Flows/Main/Cell/TextCell.xib
+++ b/CVApp/Flows/Main/Cell/TextCell.xib
@@ -16,6 +16,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="364" height="223"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c8e-aV-u1B">
+                        <rect key="frame" x="0.0" y="0.0" width="364" height="223"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="QDY-sH-eiJ">
                         <rect key="frame" x="16" y="101" width="332" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -27,12 +30,17 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="QDY-sH-eiJ" secondAttribute="trailing" constant="16" id="0c1-DC-zAS"/>
                 <constraint firstItem="QDY-sH-eiJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="28T-6R-HRZ"/>
+                <constraint firstAttribute="bottom" secondItem="c8e-aV-u1B" secondAttribute="bottom" id="7uq-Pk-Hsi"/>
                 <constraint firstItem="QDY-sH-eiJ" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="JX5-5V-Kqy"/>
+                <constraint firstItem="c8e-aV-u1B" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Ozq-aX-a7U"/>
+                <constraint firstItem="c8e-aV-u1B" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="eup-Zm-BvL"/>
                 <constraint firstItem="QDY-sH-eiJ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="r2o-VY-peS"/>
+                <constraint firstAttribute="trailing" secondItem="c8e-aV-u1B" secondAttribute="trailing" id="uPT-ba-PEk"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="QDY-sH-eiJ" secondAttribute="bottom" constant="16" id="vQx-fC-uXL"/>
             </constraints>
             <size key="customSize" width="364" height="223"/>
             <connections>
+                <outlet property="imageView" destination="c8e-aV-u1B" id="GDJ-Bh-WEe"/>
                 <outlet property="textLabel" destination="QDY-sH-eiJ" id="6q9-Tx-zbo"/>
             </connections>
             <point key="canvasLocation" x="365.21739130434787" y="194.53125"/>
